[project]
name = "packaged-app"
version = "0.1.0"
description = "Packaged application"
readme = "README.md"
authors = [
    { name = "hassaan", email = "Hassaanch1111@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
packaged-app = "packaged_app.main:print_details"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
